typescript/checker/tests/conformance/statements/for-ofStatements/ES5For-of8.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            68,
        ),
        hi: BytePos(
            71,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/statements/for-ofStatements/ES5For-of8.ts:5:6
  |
5 | for (foo().x of ['a', 'b', 'c']) {
  |      ^^^

